force-app/main/default/objects/Opportunity/fields/Budget_Accord__c.field-meta.xml
<CustomField>
    <fullName>Budget_Accord__c</fullName>
    <description>Budget Accordé HT</description>
    <label>Budget Accordé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>