force-app/main/default/objects/Opportunity/fields/Date_de_Formation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Formation__c</fullName>
    <label>Date de Formation</label>
    <type>DateTime</type>
</CustomField>