force-app/main/default/objects/Opportunity/fields/DN__c.field-meta.xml
<CustomField>
    <fullName>DN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DN</label>
    <type>Checkbox</type>
</CustomField>