force-app/main/default/objects/Opportunity/fields/Docusign_Envoy__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Envoy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign Envoyé</label>
    <type>Checkbox</type>
</CustomField>