force-app/main/default/objects/Opportunity/fields/Docusign_sign__c.field-meta.xml
<CustomField>
    <fullName>Docusign_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign signé</label>
    <type>Checkbox</type>
</CustomField>