force-app/main/default/objects/Opportunity/fields/feuille_d_emargement__c.field-meta.xml
<CustomField>
    <fullName>feuille_d_emargement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>feuille d&apos;emargement</label>
    <type>Checkbox</type>
</CustomField>