force-app/main/default/objects/Opportunity/fields/Fiche_de_paie__c.field-meta.xml
<CustomField>
    <fullName>Fiche_de_paie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fiche de paie</label>
    <type>Checkbox</type>
</CustomField>