force-app/main/default/objects/Opportunity/fields/Formateur__c.field-meta.xml
<CustomField>
    <fullName>Formateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formateur</label>
    <referenceTo>Formateur__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>