force-app/main/default/objects/Opportunity/fields/Lien_drive__c.field-meta.xml
<CustomField>
    <fullName>Lien_drive__c</fullName>
    <label>Lien drive</label>
    <type>Url</type>
</CustomField>