force-app/main/default/objects/Opportunity/fields/N_Adh_rent_OPCO__c.field-meta.xml
<CustomField>
    <fullName>N_Adh_rent_OPCO__c</fullName>
    <label>N° Adhérent OPCO</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>