force-app/main/default/objects/Opportunity/fields/N_Dossier__c.field-meta.xml
<CustomField>
    <fullName>N_Dossier__c</fullName>
    <displayFormat>{YY}-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>N°Dossier</label>
    <type>AutoNumber</type>
</CustomField>