force-app/main/default/objects/Opportunity/fields/Nombre_de_Stagire__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Stagire__c</fullName>
    <label>Nombre de Stagire</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>