force-app/main/default/objects/Opportunity/fields/OPCO__c.field-meta.xml
<CustomField>
    <fullName>OPCO__c</fullName>
    <label>OPCO</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGEFICE</fullName>
            </value>
            <value>
                <fullName>AKTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>