force-app/main/default/objects/Opportunity/fields/parcour__c.field-meta.xml
<CustomField>
    <fullName>parcour__c</fullName>
    <label>parcour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospection</fullName>
            </value>
            <value>
                <fullName>Conception</fullName>
            </value>
            <value>
                <fullName>Synthèse</fullName>
            </value>
            <value>
                <fullName>Planification</fullName>
            </value>
            <value>
                <fullName>Convocation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>