force-app/main/default/objects/Opportunity/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hygiène</fullName>
            </value>
            <value>
                <fullName>Piloter aps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>