force-app/main/default/objects/Opportunity/fields/Prospecteur__c.field-meta.xml
<CustomField>
    <fullName>Prospecteur__c</fullName>
    <label>Prospecteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mehdi</fullName>
            </value>
            <value>
                <fullName>Aziz</fullName>
            </value>
            <value>
                <fullName>Abdel</fullName>
            </value>
            <value>
                <fullName>Ayoub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>