force-app/main/default/objects/Opportunity/recordTypes/Formation.recordType-meta.xml
<RecordType>
    <fullName>Formation</fullName>
    <active>true</active>
    <businessProcess>Formation</businessProcess>
    <label>Formation</label>
</RecordType>